--- a/src/Churchee.Module.Identity/Areas/Configuration/Pages/Contributors/Index.razor
+++ b/src/Churchee.Module.Identity/Areas/Configuration/Pages/Contributors/Index.razor
@@ -26,7 +26,7 @@
     [Inject]
     private ICurrentUser CurrentUser { get; set; } = default!;
 
-    private Guid _activeTenant { get; set; } = default!;
+    private Guid _activeTenant { get; set; } = Guid.Empty;
 
     bool isLoading = false;
 
