--- a/src/Churchee.Module.UI/Components/ModalForm.razor
+++ b/src/Churchee.Module.UI/Components/ModalForm.razor
@@ -5,9 +5,6 @@
 @using Microsoft.Extensions.Logging
 @using Radzen
 @using Radzen.Blazor
-@inject ILogger<Form> _logger
-@inject NotificationService _notificationService
-
 @using System.Reflection
 @using System.ComponentModel.DataAnnotations
 @using System.Linq.Expressions
@@ -15,40 +12,42 @@
 
 @if (_editContext != null)
 {
-
     <EditForm EditContext="@_editContext" OnSubmit="HandleSubmit">
-    <DataAnnotationsValidator />
+        <DataAnnotationsValidator />
 
-    <FormFields FormInvalid="_formInvalid" SubmitClicked="_submitClicked" InputModel="InputModel" Properties="@InputModel.GetType().GetProperties().Where(x => x.CanWrite)" OnValueChanged=UpdateFormState EditContext="_editContext"></FormFields>
-    <div class="mt-2">
-            <div class="sticky-formButtons">
+        <FormFields FormInvalid="_formInvalid" SubmitClicked="_submitClicked" InputModel="InputModel" Properties="@InputModel.GetType().GetProperties().Where(x => x.CanWrite)" OnValueChanged=UpdateFormState EditContext="_editContext"></FormFields>
+            <div class="mt-2">
+                <div class="sticky-formButtons">
 
-                <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.End">
-                    <RadzenButton Disabled="_formInvalid" Text="Submit" ButtonStyle="ButtonStyle.Success" ButtonType="ButtonType.Submit" />
-                    <RadzenButton Text="Cancel" Click="Cancel" ButtonStyle="ButtonStyle.Danger" ButtonType="ButtonType.Button" />
-                </RadzenStack>
+                    <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.End">
+                        <RadzenButton Disabled="_formInvalid" Text="Submit" ButtonStyle="ButtonStyle.Success" ButtonType="ButtonType.Submit" />
+                        <RadzenButton Text="Cancel" Click="Cancel" ButtonStyle="ButtonStyle.Danger" ButtonType="ButtonType.Button" />
+                    </RadzenStack>
 
+                </div>
             </div>
-    </div>
-
-</EditForm>
-
-
+    </EditForm>
 }
 
 @code {
 
+    [Inject]
+    public ILogger<Form> Logger { get; set; } = default!;
+
     [Parameter]
     public EventCallback OnCancelForm { get; set; }
+
+    [Parameter]
+    public object InputModel { get; set; } = default!;
+
+    [Parameter]
+    public EventCallback<object> OnSave { get; set; }
 
     private bool _submitClicked;
 
     private bool _formInvalid;
 
-    private EditContext _editContext { get; set; }
-
-    [Parameter]
-    public object InputModel { get; set; }
+    private EditContext _editContext { get; set; } = default!;
 
     protected override void OnParametersSet()
     {
@@ -70,27 +69,20 @@
 
     private async Task HandleSubmit()
     {
-
         try
         {
             _submitClicked = true;
 
             if (_editContext.Validate())
             {
-                _logger.LogInformation("HandleValidSubmit");
+                Logger.LogInformation("HandleValidSubmit");
 
                 await OnSave.InvokeAsync(null);
             }
-
         }
         catch (Exception ex)
         {
-            _logger.Log(LogLevel.Error, ex, "Error Submitting form");
+            Logger.Log(LogLevel.Error, ex, "Error Submitting form");
         }
-
     }
-
-    [Parameter]
-    public EventCallback<object> OnSave { get; set; }
-
 }
