--- a/src/Churchee.Module.UI/wwwroot/scss/themes/radzen/components/blazor/_card.scss
+++ b/src/Churchee.Module.UI/wwwroot/scss/themes/radzen/components/blazor/_card.scss
@@ -22,7 +22,7 @@ $card-heading-margin-bottom: 0.5rem !default;
 
   &.rz-variant-outlined {
     background: transparent;
-    border: var(--rz-card-border); ;
+    border: var(--rz-card-border);
   }
 
   &.rz-variant-text {
