--- a/src/Churchee.Module.UI/wwwroot/scss/themes/radzen/components/blazor/_menu.scss
+++ b/src/Churchee.Module.UI/wwwroot/scss/themes/radzen/components/blazor/_menu.scss
@@ -57,7 +57,7 @@ $context-menu-box-shadow: $rz-shadow-3 !default;
   }
 
   .rz-navigation-item-wrapper {
-    border-radius: var(--rz-menu-item-border-radius);;
+    border-radius: var(--rz-menu-item-border-radius);
 
     .rz-navigation-item-link {
       padding-block: var(--rz-menu-item-padding-block);
@@ -120,7 +120,7 @@ $context-menu-box-shadow: $rz-shadow-3 !default;
   }
 
   .rz-navigation-item-wrapper {
-    border-radius: var(--rz-menu-top-item-border-radius);;
+    border-radius: var(--rz-menu-top-item-border-radius);   
 
     .rz-navigation-item-link {
       padding-block: var(--rz-menu-top-item-padding-block);
