--- a/src/Churchee.Module.Identity/Areas/Configuration/Pages/Contributors/Edit.razor
+++ b/src/Churchee.Module.Identity/Areas/Configuration/Pages/Contributors/Edit.razor
@@ -1,6 +1,7 @@
 ﻿@page "/management/configuration/contributors/edit/{Id:guid}"
 @inherits BasePage
 @using Churchee.Common.Abstractions.Auth
+@using Churchee.Common.Abstractions.Utilities
 @using Churchee.Common.ValueTypes
 @using Churchee.Module.Identity.Features.Contributors.Queries
 @using Churchee.Module.Identity.Features.Roles.Queries
@@ -8,6 +9,7 @@
 @using MediatR
 @using Microsoft.AspNetCore.Components.Sections
 @using Microsoft.AspNetCore.Mvc.Rendering
+@using Microsoft.Extensions.Logging
 @using Radzen
 @using Radzen.Blazor
 
@@ -15,7 +17,9 @@
 
 @if (InputModel != null)
 {
-    <Form InputModel="@InputModel" OnSave=@(async () => await ValidSubmitForm()) />
+    <Form InputModel="@InputModel" OnSave=@(async () => await ValidSubmitForm(string.Empty))>
+        <RadzenButton Text="Reset Password" ButtonStyle="ButtonStyle.Primary" ButtonType="ButtonType.Button" Click=@(async () => await ValidSubmitForm("ResetPassword")) />
+    </Form>
 }
 
 @code {
@@ -31,6 +35,9 @@
     [Inject]
     private ChurcheeUserManager UserManager { get; set; } = default!;
 
+    [Inject]
+    private IEmailService EmailService { get; set; } = default!;
+
     protected override async Task OnInitializedAsync()
     {
         var roles = await Mediator.Send(new GetAllSelectableRolesForUserQuery(Id));
@@ -38,17 +45,45 @@
         InputModel = new(new MultiSelect(roles));
     }
 
-    private async Task ValidSubmitForm()
+    private async Task SendPasswordReset(){
+
+        var user = await UserManager.FindByIdAsync(Id.ToString());
+
+        if (user == null || !(await UserManager.IsEmailConfirmedAsync(user)))
+        {
+            NotificationService.Notify(NotificationSeverity.Error, "Failed to send password reset");
+        }
+
+        var code = await UserManager.GeneratePasswordResetTokenAsync(user);
+
+        code = WebEncoders.Base64UrlEncode(Encoding.UTF8.GetBytes(code));
+
+        var callbackUrl = $"{NavigationManager.BaseUri}account/resetpassword?code={code}";
+
+        if (callbackUrl == null)
+        {
+            Logger.Log(LogLevel.Error, "Callback URL is null. Check the Url.Page method parameters and ensure the page exists.");
+        }
+
+        var message = "Reset Password Link: " + callbackUrl;
+
+        await EmailService.SendEmailAsync(user.Email, "Reset your password", message);
+
+        NotificationService.Notify(NotificationSeverity.Success, "Password Reset send to Contributor");
+    }
+
+
+    private async Task UpdateContributor()
     {
         var user = await UserManager.FindByIdAsync(Id.ToString());
 
         var rolesNames = InputModel.Roles.Items.Where(w => InputModel.Roles.SelectedValues.Contains(w.Value)).Select(s => s.Text).ToList();
 
-        var exisitingRoles = await UserManager.GetRolesAsync(user);
+        var existingRoles = await UserManager.GetRolesAsync(user);
 
-        var rolesToRemove = exisitingRoles.Where(w => !rolesNames.Contains(w)).ToList();
-        
-        var rolesToAdd = rolesNames.Where(w => !exisitingRoles.Contains(w)).ToList();
+        var rolesToRemove = existingRoles.Where(w => !rolesNames.Contains(w)).ToList();
+
+        var rolesToAdd = rolesNames.Where(w => !existingRoles.Contains(w)).ToList();
 
         await UserManager.RemoveFromRolesAsync(user, rolesToRemove);
 
@@ -59,4 +94,15 @@
         NavigationManager.NavigateTo("/management/configuration/contributors");
     }
 
+    private async Task ValidSubmitForm(string buttonText)
+    {
+        if (buttonText == "ResetPassword")
+        {
+            await SendPasswordReset();
+
+            return;
+        }
+
+        await UpdateContributor();
+    }
 }
