--- a/src/Churchee.Module.Identity/wwwroot/css/login.css
+++ b/src/Churchee.Module.Identity/wwwroot/css/login.css
@@ -25,7 +25,7 @@ h1 {
   background: linear-gradient(45deg, #0d6efd, #6c757d) !important;
   padding: 1rem;
 }
-.login-section form {
+.login-section .wrap {
   background: #c5ddec;
   padding: 2rem;
   width: 30rem;
@@ -43,8 +43,14 @@ h1 {
 .login-section .logo {
   height: 2.2rem;
 }
+.login-section .sub-link {
+  margin-top: 1rem;
+  display: block;
+  text-decoration: none;
+  color: #3971c1;
+}
 
-button {
+button, .btn {
   display: inline-block;
   padding: 0.7rem 1rem;
   text-align: center;
@@ -60,7 +66,7 @@ button {
   border-radius: 0.3rem;
   font-size: 1em;
 }
-button:hover {
+button:hover, .btn:hover {
   background: #305993;
 }
 
@@ -136,4 +142,15 @@ input[type=checkbox]:disabled {
   --form-control-color: var(--form-control-disabled);
   color: var(--form-control-disabled);
   cursor: not-allowed;
+}
+
+.white {
+  color: #fff;
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 2rem;
+  color: #5a7495;
+  font-size: 1.1em;
 }
